--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,6 @@ venv.bak/
 
 # Rope project settings
 .ropeproject
-
 # mkdocs documentation
 /site
 
@@ -112,3 +111,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# data 
+data
